--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,18 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+  say-name:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "Say name env-var"
+          command: "echo ${MY_NAME}"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -24,3 +36,5 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+      - say-name:
+          requires: [say-hello]
